♻️ refactor: Properly handling route

--- a/src/SwashbucklerDiary.Maui/Pages/Backups/BackupsPage.razor
+++ b/src/SwashbucklerDiary.Maui/Pages/Backups/BackupsPage.razor
@@ -11,7 +11,7 @@
     </MButton>
 
     <MyTabs @bind-Value="tab"
-                  Items="tabNames">
+            Items="tabListItems">
     </MyTabs>
 
     <MSpacer></MSpacer>
