--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/Tabs/MyTabs.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/Tabs/MyTabs.razor
@@ -9,7 +9,7 @@
         <MTab @key="item"
               Class="my-tab"
               Ripple="false">
-            @(I18n.T(item))
+            @(I18n.T(item.Text))
         </MTab>
     }
 </MTabs>
