--- a/src/SwashbucklerDiary.Rcl/Pages/IndexPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/IndexPage.razor
@@ -4,7 +4,7 @@
 
 <MyAppBar>
     <MyTabs @bind-Value="tab"
-                  Items="tabNames">
+            Items="tabListItems">
     </MyTabs>
 
     <MSpacer></MSpacer>
