--- a/src/SwashbucklerDiary.WebAssembly/Page/Export/ExportPage.razor
+++ b/src/SwashbucklerDiary.WebAssembly/Page/Export/ExportPage.razor
@@ -12,7 +12,7 @@
     </MButton>
 
     <MyTabs @bind-Value="tab"
-                  Items="tabNames">
+            Items="tabListItems">
     </MyTabs>
 
     <MSpacer></MSpacer>
