--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/PageContainer/MyPageContainer.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/PageContainer/MyPageContainer.razor
@@ -1,5 +1,5 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
 
-<PPageContainerReplacement UseRegex="false" IncludePatterns="includePatterns">
+<PPageContainerReplacement UseRegex="false" IncludePatterns="IncludePatterns">
     @ChildContent
 </PPageContainerReplacement>
