🆕 feat(NavigateController): Better navigation logic

--- a/src/SwashbucklerDiary.WebAssembly/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.WebAssembly/Layout/MainLayout.razor
@@ -13,9 +13,9 @@
                     <MainLayoutNavDrawer Items="navigationButtons" IsPermanentPath="IsPermanentPath"></MainLayoutNavDrawer>
 
                     <MMain>
-                        <MyPageContainer PermanentPaths="permanentPaths">
+                        <PageCacheContainer>
                             @Body
-                        </MyPageContainer>
+                        </PageCacheContainer>
                     </MMain>
 
                     <MainLayoutBottomNav Items="navigationButtons" IsPermanentPath="IsPermanentPath"></MainLayoutBottomNav>
