--- a/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
@@ -11,9 +11,9 @@
                     <MainLayoutNavDrawer Items="navigationButtons" IsPermanentPath="IsPermanentPath"></MainLayoutNavDrawer>
 
                     <MMain>
-                        <MyPageContainer PermanentPaths="permanentPaths">
+                        <PageCacheContainer>
                             @Body
-                        </MyPageContainer>
+                        </PageCacheContainer>
                     </MMain>
 
                     <MainLayoutBottomNav Items="navigationButtons" IsPermanentPath="IsPermanentPath"></MainLayoutBottomNav>
