--- a/src/SwashbucklerDiary.Rcl/Layout/MainLayoutBottomNav/MainLayoutBottomNavItem.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/MainLayoutBottomNav/MainLayoutBottomNavItem.razor
@@ -2,7 +2,7 @@
 @inherits MainLayoutNavItemBase
 
 <MButton Ripple="false"
-         OnClick="Value.OnClick">
+         Href="@Value.Href">
     <MIcon>
         @Icon
     </MIcon>
