--- a/src/SwashbucklerDiary.Rcl/Layout/MainLayoutNavDrawer/MainLayoutNavDrawerItem.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/MainLayoutNavDrawer/MainLayoutNavDrawerItem.razor
@@ -6,7 +6,7 @@
         <MListItem @attributes="@context.Attrs"
                    Class="@Class"
                    Ripple="false"
-                   OnClick="Value.OnClick">
+                   Href="@Value.Href">
             <MListItemIcon>
                 <MIcon Size="24">
                     @Icon
