--- a/src/SwashbucklerDiary.Rcl/Components/MarkdownEdit/MarkdownEdit.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MarkdownEdit/MarkdownEdit.razor
@@ -5,7 +5,7 @@
     <MMarkdown @ref="mMarkdown"
                Value="@Value"
                ValueChanged="ValueChanged"
-               Class="@Class"
+               Class="@($"{Class} {(firstLineIndent?"first-line-indent":"")}")"
                Options="_options"
                OnAfter="AfterMarkdownRender"
                OnToolbarButtonClick="HandleToolbarButtonClick">
