♻️ refactor: change status-bar-and-navigation-bar.css import method

--- a/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
@@ -1,5 +1,10 @@
 ﻿@inherits MainLayoutBase
 
+@if (IsAndroidOrIOS)
+{
+    <link href="css/status-bar-and-navigation-bar.css" rel="stylesheet" />
+}
+
 @if (afterInitSetting)
 {
     <MApp>
