🆕 feat: Click on read page tag to jump to tagDetails page

--- a/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
@@ -134,8 +134,8 @@
                 @foreach (var item in Tags)
                 {
                     <MChip @key="item.Id"
-                           Style="pointer-events:none;"
-                           Outlined="true">
+                           Outlined="true"
+                           OnClick="@(()=>To($"tagDetails/{item.Id}"))">
                         @(item.Name)
                     </MChip>
                 }
