--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
@@ -587,3 +587,7 @@ html.m-overlay-scroll-blocked {
 .first-line-indent.vditor-reset > p {
     text-indent: 2rem;
 }
+
+.vditor-toolbar__item [data-type="upload"] {
+    display: none;
+}
