--- a/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/VditorMarkdownPreview.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/VditorMarkdownPreview.razor
@@ -1,6 +1,6 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
 
-<div @ref="Ref" class="@($"user-select {Class}")" style="@Style">
+<div @ref="Ref" class="@Class" style="@Style">
 </div>
 
 
