--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Achievement/AchievementPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Achievement/AchievementPage.razor
@@ -10,11 +10,18 @@
         </MIcon>
     </MButton>
 
-    <SearchTextField @bind-Visible="showSearch"
-                     @bind-Value="search"
-                     Title="@(I18n.T("Mine.Achievement.Name"))"
-                     OnInput="UpdateAchievements">
-    </SearchTextField>
+    @if (!showSearch)
+    {
+        <MToolbarTitle Class="font-weight-bold">
+            @(I18n.T("Mine.Achievement.Name"))
+        </MToolbarTitle>
+        <MSpacer></MSpacer>
+    }
+
+    <VisibleTextField @bind-Visible="showSearch"
+                      @bind-Value="search"
+                      OnInput="UpdateAchievements">
+    </VisibleTextField>
 
     <MButton Icon="true"
              OnClick="()=>showSearch=!showSearch">
