--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PasswordDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PasswordDialog.razor
@@ -9,7 +9,6 @@
     <MForm @ref="@form"
            Model="@model"
            OnValidSubmit="HandleOnOK"
-           EnableValidation="true"
            EnableI18n="true">
         <MCard>
             <MCardTitle Class="font-weight-bold">
@@ -24,9 +23,10 @@
             <MCardText Class="pb-0">
                 <MTextField @bind-Value="model.Password"
                             @ref="textField"
-                            Dense="true"
-                            HideDetails="@("auto")"
-                            Outlined="true"
+                            Dense
+                            MinHeight="48"
+                            Filled
+                            Rounded
                             Counter="@MaxLength"
                             maxlength="@MaxLength"
                             spellcheck="false"
@@ -36,8 +36,10 @@
                             OnAppendClick="() => showPassword1 = !showPassword1">
                 </MTextField>
                 <MTextField @bind-Value="model.PasswordConfirmation"
-                            Dense="true"
-                            Outlined="true"
+                            Dense
+                            MinHeight="48"
+                            Filled
+                            Rounded
                             Counter="@MaxLength"
                             maxlength="@MaxLength"
                             spellcheck="false"
@@ -47,7 +49,7 @@
                             OnAppendClick="() => showPassword2 = !showPassword2">
                 </MTextField>
             </MCardText>
-            <MCardActions>
+            <MCardActions Class="pt-0">
                 <MSpacer></MSpacer>
                 <MButton Text="true" OnClick="HandleOnCancel">
                     @(I18n.T("Share.Cancel"))
