--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
@@ -97,6 +97,7 @@
 </InputDialog>
 
 <InputDialog @bind-Visible="showEditSign"
+             MultiLine
              Text="@Sign"
              Title="@(I18n.T("User.EditSign"))"
              MaxLength="100"
