--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/masa-blazor-extend.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/masa-blazor-extend.css
@@ -307,3 +307,8 @@
     -webkit-box-orient: vertical;
     display: -webkit-box;
 }
+
+.m-text-field .m-input__append-inner {
+    margin-top: auto !important;
+    margin-bottom: auto !important;
+}
